--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-image-gallery": "^1.4.0",
     "react-router-dom": "^7.7.1"
   },
   "devDependencies": {
@@ -20,6 +21,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-image-gallery": "^1.2.4",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
